# multi-agent-RAG

./: .env.example  .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: graph.py
backend/app/agents/nodes/: generator.py  reranker.py  retriever.py  router.py  validator.py
backend/app/agents/tools/: keyword_search.py  summarizer.py  vector_search.py
backend/app/api/middleware/: auth.py  rate_limit.py
backend/app/api/routes/: chat.py  documents.py
backend/app/core/: config.py  logging.py
backend/app/ingestion/: chunker.py  embedder.py  pipeline.py
backend/app/ingestion/parsers/: docx_parser.py  pdf_parser.py  pptx_parser.py
backend/app/models/: schemas.py  state.py
backend/app/services/: cache.py  llm.py  supabase.py
backend/worker/: celery_app.py
frontend/app/(auth)/: page.tsx
frontend/app/(dashboard)/chat/[sessionId]/: page.tsx
frontend/app/(dashboard)/documents/: page.tsx
frontend/app/api/query/: route.ts
frontend/components/chat/: ChatWindow.tsx  MessageBubble.tsx  SourceCard.tsx
frontend/components/documents/: DocList.tsx  ProcessingStatus.tsx  UploadZone.tsx
frontend/lib/api/: client.ts
infra/supabase/migrations/: 001_initial_schema.sql
tests/eval/: langsmith_eval.py
tests/unit/: test_evaluation_agent.py  test_routing_agent.py
